# shopify-order-exception-agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: secret-scan.yml  tests.yml
alembic/: env.py
alembic/versions/: 001_initial.py  001_initial_schema.py  002_token_columns.py
app/: config.py  main.py  worker.py
app/agent/: graph.py  nodes.py  state.py  tools.py
app/db/: session.py
app/middleware/: verify_webhook.py
app/models/: db.py  webhook.py
app/routers/: admin.py  dashboard.py  dlq.py  webhooks.py
app/services/: event_router.py  idempotency.py  kill_switch.py  shopify_client.py  slack_client.py  threpl_client.py  weekly_report.py
docs/: LEARNINGS.md
docs/adr/: 001-langgraph-stateful-agent.md  002-redis-idempotency.md  003-immediate-200-background-processing.md  004-reviewer-node.md  005-redis-pubsub-event-router.md  006-kill-switch.md  007-fulfillment-order-hold.md  008-dashboard.md  009-shadow-mode.md  010-high-value-manual-review.md  011-sentry-monitoring.md  012-worker-heartbeat.md  013-weekly-impact-report.md  014-llm-token-cost-tracking.md
docs/runbooks/: RB001-shadow-mode-demo.md  RB002-dlq-replay.md
scripts/: dev_run.sh  register_webhooks.py  seed_demo.py
tests/: conftest.py  test_agent.py  test_webhooks.py
